# 2dConvWithOpenCL

./: CMakeLists.txt  conv.cl  convolution.h  deconv.cl  main.cpp
